--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "apollo-datasource-rest": "latest",
     "apollo-server": "2.1.0",
+    "crypto-js": "^3.1.9-1",
     "graphql": "14.0.2",
+    "mockserver": "^3.0.0",
     "node-fetch": "2.6.0"
   },
   "license": "MIT",
